--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#/">Home</a></li>
-            <li ng-if="isAuthenticated"><a href="#/serve">Grab Ughali</a></li>
+            <li ng-if="isAuthenticated"><a href="#/serve">Grab Ugali</a></li>
             <li ng-if="!isAuthenticated"><a href="#/login">Log In</a></li>
             <li ng-if="isAuthenticated"><a href="#/" ng-click="authService.logout()">Log Out</a></li>
           </ul>
